adds start button and hover effects

--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
 	<title>ZAIC</title>
 </head>
 <body>
-	<script src="main.js" defer></script>
 	<main>
 
 	<section id="pieces-container1">
-		<button class="piece-button big-piece P1-piece"></button>
-		<button class="piece-button horizontal-long-piece P1-piece"></button>
-		<button class="piece-button vertical-long-piece P1-piece"></button>
-		<button class="piece-button small-piece P1-piece"></button>
+		<button class="piece-button big-piece P1-piece selected-piece">x8</button>
+		<button class="piece-button horizontal-long-piece P1-piece">x8</button>
+		<button class="piece-button vertical-long-piece P1-piece">x8</button>
+		<button class="piece-button small-piece P1-piece">x3</button>
 	</section>
 
 
@@ -327,13 +326,16 @@
 	</section>
 
 	<section id="pieces-container2">
-		<button class="piece-button big-piece P2-piece"></button>
-		<button class="piece-button horizontal-long-piece P2-piece"></button>
-		<button class="piece-button vertical-long-piece P2-piece"></button>
-		<button class="piece-button small-piece P2-piece"></button>
+		<button class="piece-button big-piece P2-piece selected-piece">x8</button>
+		<button class="piece-button horizontal-long-piece P2-piece">x8</button>
+		<button class="piece-button vertical-long-piece P2-piece">x8</button>
+		<button class="piece-button small-piece P2-piece">x3</button>
 	</section>
 
-</main>
+	</main>
 
+	<button id="start-stop-btn" class="stop">STOP</button>
+	
+	<script src="main.js"></script>
 </body>
 </html>
