--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 
 	</main>
 
-	<button id="start-stop-btn" class="stop">STOP</button>
+	<button id="start-stop-btn" class="start">START</button>
 	
 	<script src="main.js"></script>
 </body>
